<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ХКС-Байкал</string>
    <string name="app_name_teacher">ХКС-Байкал-П</string>
    <string name="menu_find">FIND</string>
    <string name="menu_bl_conn">CONN</string>
    <string name="menu_option">OPT</string>
    <string name="tab_text_1">FIND</string>
    <string name="tab_text_2">SEND</string>
    <string name="tab_text_3">CHECK LIST</string>
    <string name="tab_text_1_Rus">СОЕДИНЕНИЕ</string>
    <string name="tab_text_2_Rus">УПРАВЛЕНИЕ</string>
    <string name="tab_text_3_Rus">ОТЧЕТ</string>
    <string name="tab_find_Rus">СВЯЗЬ</string>
    <string name="tab_send_Rus">УПРАВЛЕНИЕ</string>
    <string name="tab_check_Rus">СЛАЙДЫ</string>
    <string name="tvFindList"> FIND DEVICES LIST </string>
    <string name="tvPairList"> PAIRED DEVICES LIST </string>
    <string name="tvFindListRus"> НАЙДЕННЫЕ УСТРОЙСТВА </string>
    <string name="tvPairListRus"> СОПРЯЖЕННЫЕ УСТРОЙСТВА </string>
    <string name="button_start_find">FIND</string>
    <string name="button_stop_find">STOP</string>
    <string name="button_stop">STOP</string>
    <string name="button_pause">PAUSE</string>
    <string name="button_mute">MUTE</string>
    <string name="button_start_find_Rus">ПОИСК</string>
    <string name="button_stop_find_Rus">СТОП</string>
    <string name="button_stop_Rus">СТОП</string>
    <string name="button_pause_Rus">ПАУЗА</string>
    <string name="button_mute_Rus">ЗВУК</string>
    <string name="button_send_Rus">УСТАНОВИТЬ</string>
    <string name="button_save_Rus">СОХРАНИТЬ</string>
    <string name="none_paired">Нет сопряженных устройств</string>
    <string name="scanning">Поиск устройств…</string>
    <string name="select_device">Выберите устройство</string>
    <string name="none_found">Устройств не найдено</string>
    <string name="title_paired_devices"><u>Сопряженные устройства</u></string>
    <string name="title_other_devices"><u>Найденные устройства</u></string>
    <string name="button_scan">Поиск устройств</string>
    <string name="label_settings">Настройки</string>
    <string name="label_exit">Смена пользователя</string>
    <string name="label_about">О программе</string>
    <string name="settings_time_1">Лимит выполнения 1 этапа</string>
    <string name="settings_time_2">Лимит выполнения 2 этапа</string>
    <string name="settings_time_3">Лимит выполнения 3 этапа</string>
    <string name="start_val_settings_time">00:10</string>
    <string name="def_val_settings_time">00:00</string>
    <string name="settings_mode">Ручной режим управления</string>
    <string name="system_grade">Система оценки:</string>
    <string name="system_1">ОСКЭ</string>
    <string name="system_2">КРООТ</string>
    <string name="hint_minute">Минуты</string>
    <string name="hint_second">Секунды</string>
    <string name="bt_not_enabled_leaving">Bluetooth выключен</string>
    <string name="title_connecting">соединение…</string>
    <string name="title_connected_to">подключено к <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">не подключено</string>
    <string name="not_connected">Ваше устройство не подключено к тренажеру</string>
    <string name="tvCommentPairList">*Tap on a device to connect or disconnect.</string>
    <string name="tvCommentFindList">*Tap on a device to pair.</string>
    <string name="tvCommentPairListRus">*Коснитесь устройства для подключения/отключения.</string>
    <string name="tvCommentFindListRus">*Коснитесь устройства для сопряжения.</string>
    <string name="tvCommentSelectDevice">Selected device is: </string>
    <string name="tvSelectDevice">none</string>
    <string name="tvAnswer">Last answer is:</string>
    <string name="tvEmpty">empty</string>
    <string name="colon">:</string>
    <string name="tvCommentStatus">Connection status: </string>
    <string name="statusDisconnect">disconnect</string>
    <string name="statusConnecting">connecting</string>
    <string name="statusConnected">connected</string>
    <string name="sent_dialog_header">Select beats per minute: </string>
    <string name="defBPM">ЧСС: 70</string>
    <string name="defPressure">АД: 120/70</string>
    <string name="defResp">ЧДД: 10</string>
    <string name="defSPO">SpO2: 97</string>
    <string name="minBPM">0</string>
    <string name="maxBPM">200</string>
    <string name="minPress">90</string>
    <string name="maxPress">200</string>
    <string name="minBleed">0</string>
    <string name="maxBleed">3000</string>
    <string name="minSat">0</string>
    <string name="maxSat">99</string>
    <string name="preHintBpm">ЧСС: </string>
    <string name="preHintPress">АД: </string>
    <string name="preHintBleed">Кровопотеря: </string>
    <string name="preHintSPO">SpO2: </string>
    <string name="unknown">None found</string>
    <string name="unnamed">Unnamed</string>
    <string name="check_title">Система оценки </string>
    <string name="check_system">КРООТ</string>
    <string name="default_device_send">none</string>
    <string name="hintEdit">Введите значение</string>
    <string name="hintTime">__ : __</string>
    <string name="hintMinute">__\nминут</string>
    <string name="plusMinute">\nминут</string>
    <string name="slide_title">Этапы операции</string>
    <string name="check_title_kroot">Комплексная рейтинговая оценка оперативной техники (КРООТ)</string>
    <string name="kroot_private_info">Личные данные</string>
    <string name="kroot_teacher_nick">ФИО\nпреподавателя</string>
    <string name="kroot_teacher_ID">ID\nпреподавателя</string>
    <string name="kroot_student_nick">ФИО\nслушателя</string>
    <string name="kroot_student_ID">ID\nслушателя</string>
    <string name="kroot_program">Программа</string>
    <string name="kroot_ord">1. Ординатура </string>
    <string name="kroot_prepare">2. Подготовка и повышение квалификации</string>
    <string name="kroot_title_testing_data">по данным тестирования</string>
    <string name="kroot_title_prev_kroot">предыдущие КРООТ\n(при отсутствии данных,\nуровень – «Базовый»)</string>
    <string name="kroot_student_level">Уровень слушателя</string>
    <string name="kroot_level_0">0. Не выполнялось</string>
    <string name="kroot_level_1">1. Базовый</string>
    <string name="kroot_level_2">2. Ниже среднего</string>
    <string name="kroot_level_3">3. Средний</string>
    <string name="kroot_level_4">4. Выше среднего</string>
    <string name="kroot_level_5">5. Опытный</string>
    <string name="kroot_operation">Операция</string>
    <string name="kroot_operation_type_1">Сосудистый доступ</string>
    <string name="kroot_operation_type_2">Сосудистый шов</string>
    <string name="kroot_operation_type_3">Сосудистое протезирование</string>
    <string name="kroot_all_time">Общее время операции</string>
    <string name="kroot_start_time">Время\nначала</string>
    <string name="kroot_stop_time">Время\nзавершения</string>
    <string name="kroot_stage_prepare">Этапы подготовки</string>
    <string name="kroot_prepare_1">1. Подготовка\nбольного</string>
    <string name="kroot_prepare_2">2. Халат,\nперчатки</string>
    <string name="kroot_prepare_3">3. Обработка,\nотграничение\nоперац. поля</string>
    <string name="kroot_stage_operation">Этапы операции</string>
    <string name="kroot_operation_1">1. Доступ, выделение</string>
    <string name="kroot_operation_2">2. Операция на сосуде</string>
    <string name="kroot_operation_3">3. Закрытие раны</string>
    <string name="kroot_operation_difficulty">Уровень сложности</string>
    <string name="kroot_difficulty_1">Простая неизмененная анатомия</string>
    <string name="kroot_difficulty_2">Некоторые изменения, не связанные с предыду-\nщими операциями, характером повреждения.</string>
    <string name="kroot_difficulty_3">Средней сложности</string>
    <string name="kroot_difficulty_4">Измененная анатомия, вероятно требующая альтернативных методов</string>
    <string name="kroot_difficulty_5">Измененная анатомия, обширная патология, связанная с предыдущими операциями, лечением, характером повреждений</string>
    <string name="kroot_title_grade">Ваша оценка: </string>
    <string name="oske_title_start">II этап аккредитационного экзамена</string>
    <string name="oske_title_spec">Специальность</string>
    <string name="oske_spec">Хирургия</string>
    <string name="oske_title_date">Дата</string>
    <string name="oske_hint_date">Введите дату…</string>
    <string name="oske_title_stud_number">Номер кандидата</string>
    <string name="oske_hint_stud_number">Введите номер…</string>
    <string name="interval_1">Доступ:</string>
    <string name="interval_2">Операция:</string>
    <string name="interval_3">Закрытие\nраны:</string>
    <string name="about_version_title">Версия приложения</string>
    <string name="about_version">1.5.8</string>
    <string name="about_build">Сборка</string>
    <string name="about_build_number">200221</string>
    <string name="about_footer">© MedSimTech LLC, 2021</string>
    <string name="hyperlink"><a href="https://www.medsimtech.com"> <![CDATA[www.medsimtech.com]]></a></string>
    <string name="oske_column_number">№\nп/п</string>
    <string name="oske_column_action">Действие аккредитуемого лица</string>
    <string name="oske_column_yes_no">Критерий\nоценки</string>
    <string name="oske_yes">ДА</string>
    <string name="oske_no">НЕТ</string>
    <string name="button_prev">ПРЕД.</string>
    <string name="button_next">СЛЕД.</string>
    <string name="button_calc">ОЦЕНКА</string>
    <string name="oske_button_end">ЗАВЕРШИТЬ</string>
    <string name="kroot_1">1 балл</string>
    <string name="kroot_2">2 балла</string>
    <string name="kroot_3">3 балла</string>
    <string name="kroot_4">4 балла</string>
    <string name="kroot_5">5 баллов</string>
    <string name="kroot_name_hint">Введите ФИО…</string>
    <string name="kroot_id_hint">Введите ID…</string>
    <string-array name="pressure">
        <item>70/40</item>
        <item>70%40</item>
        <item>80/45</item>
        <item>80%45</item>
        <item>90/50</item>
        <item>90%50</item>
        <item>100/60</item>
        <item>100%60</item>
        <item>110/65</item>
        <item>110%65</item>
        <item>120/70</item>
        <item>120%70</item>
        <item>130/80</item>
        <item>130%80</item>
        <item>140/85</item>
        <item>140%85</item>
        <item>150/90</item>
        <item>150%90</item>
        <item>160/90</item>
        <item>160%90</item>
    </string-array>
</resources>