<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/kroot_stage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/text_color"
        android:fontFamily="@font/rubik_regular"
        android:textSize="16sp"/>

    <RadioGroup
        android:id="@+id/rg_kroot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/kroot_stage"
        android:layout_marginTop="20dp">


        <RadioButton
            android:id="@+id/rb_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/RadioButtonStyle"
            android:fontFamily="@font/rubik_regular"
            android:layout_marginStart="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:textSize="@dimen/kroot_font_size"
            android:text="@string/kroot_1"/>

        <RadioButton
            android:id="@+id/rb_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/RadioButtonStyle"
            android:fontFamily="@font/rubik_regular"
            android:layout_marginStart="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/kroot_font_size"
            android:text="@string/kroot_2" />

        <RadioButton
            android:id="@+id/rb_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/RadioButtonStyle"
            android:fontFamily="@font/rubik_regular"
            android:layout_marginStart="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/kroot_font_size"
            android:text="@string/kroot_3" />

        <RadioButton
            android:id="@+id/rb_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/RadioButtonStyle"
            android:fontFamily="@font/rubik_regular"
            android:layout_marginStart="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/kroot_font_size"
            android:text="@string/kroot_4" />

        <RadioButton
            android:id="@+id/rb_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/RadioButtonStyle"
            android:fontFamily="@font/rubik_regular"
            android:layout_marginStart="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/kroot_font_size"
            android:text="@string/kroot_5" />

    </RadioGroup>

</RelativeLayout>