<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/table_border"
    android:divider="?android:attr/dividerHorizontal"
    android:showDividers="middle"
    android:stretchColumns="2"
    android:shrinkColumns="*"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="@integer/first_column_weight"
                android:gravity="center"
                android:padding="10dp"
                android:fontFamily="@font/rubik_semi_bold"
                android:text="@string/oske_title_start"
                android:textColor="@color/colorTitle"
                android:textSize="17sp" />

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:divider="?android:attr/dividerVertical"
                android:showDividers="middle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_column="1"
                    android:gravity="center_vertical"
                    android:padding="@dimen/kroot_padding_5dp"
                    android:layout_weight="@integer/oske_first_column_weight"
                    android:textSize="16sp"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/oske_title_spec" />

                <TextView
                    android:id="@+id/oske_spec"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="@integer/oske_second_column_weight"
                    android:layout_column="2"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/oske_spec"
                    android:padding="@dimen/kroot_padding_title"/>
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:divider="?android:attr/dividerVertical"
                android:showDividers="middle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_column="1"
                    android:gravity="center_vertical"
                    android:padding="@dimen/kroot_padding_5dp"
                    android:layout_weight="@integer/oske_first_column_weight"
                    android:textSize="16sp"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/oske_title_date" />

                <TextView
                    android:id="@+id/oske_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="@integer/oske_second_column_weight"
                    android:layout_column="2"
                    android:hint="@string/oske_hint_date"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:fontFamily="@font/rubik_regular"
                    android:padding="@dimen/kroot_padding_title"/>
            </TableRow>



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:attr/dividerVertical"
                android:showDividers="middle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:gravity="center_vertical"
                    android:padding="@dimen/kroot_padding_5dp"
                    android:layout_weight="@integer/oske_first_column_weight"
                    android:hint="@string/oske_hint_date"
                    android:theme="@style/RadioButtonStyle"
                    android:textSize="16sp"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/oske_title_stud_number" />

                <EditText
                    android:id="@+id/oske_text_stud_numb"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:hint="@string/oske_hint_stud_number"
                    android:layout_weight="@integer/oske_second_column_weight"
                    android:layout_column="2"
                    android:padding="@dimen/kroot_padding_title"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:inputType="numberDecimal"
                    android:textStyle="italic"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:fontFamily="@font/rubik_regular"/>

            </TableRow>

</TableLayout>