<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/listview_border">

    <TextView
        android:id="@+id/status_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/select_device"
        android:background="@drawable/bl_title_gradient_top"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/rubik_bold"
        android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_paired_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:background="@drawable/bl_title_gradient_bot"
                android:text="@string/title_paired_devices"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-light"
                android:textSize="16sp"
                android:visibility="gone"/>

            <ListView
                android:id="@+id/paired_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingBottom="10dp"
                android:stackFromBottom="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/title_new_devices"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/bl_title_gradient_bot"
                android:text="@string/title_other_devices"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-light"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>


        <ListView
            android:id="@+id/new_devices"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingTop="2dp"
            android:stackFromBottom="true"/>

        <Button
            android:id="@+id/button_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/kroot_padding_5dp"
            android:background="@drawable/button"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/rubik_semi_bold"
            android:text="@string/button_scan"/>
    </LinearLayout>
</LinearLayout>
